[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conint_frontend_NIDE27"
version = "1.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "CONINT Frontend project."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
